@@ -1,5 +1,17 @@
 2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
 
+	* src/emit.c,
+	* src/rule.c,
+	* src/emit_kids.c,
+	* src/rule.h,
+	* src/emit_files.c,
+	* src/parser.y,
+	* src/main.c,
+	* src/emit_cost.c: Be consistent in memory use in order to erase
+	memory leaks.
+
+2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
+
 	* src/monoburg.h: Add a `with_line' variable which tells if
 	`#line' directives have to be output.
 	* src/main.c (parse_options): Parse the option.
